Connect Allur frontend to stateful scenario API and offline launch
